--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -8,6 +8,10 @@ on:
         type: string
         description: PR number for RC tag generation
         required: false
+      version_tag:
+        type: string
+        description: Version tag for the image
+        required: false
 
 jobs:
   build-docker-image:
@@ -61,7 +65,7 @@ jobs:
           tags: |
             type=sha,prefix=,format=long
             type=raw,value=main,enable=${{ github.ref_name == 'main' }}
-            type=raw,value=stable,enable=${{ startsWith(github.ref, 'refs/tags/v') }}
+            type=raw,value=${{ inputs.version_tag }},enable=${{ inputs.version_tag != '' }}
             type=raw,value=rc-PR-${{ inputs.pr_number }},enable=${{ inputs.pr_number != '' }}
       - name: Login to ghcr
         uses: docker/login-action@v3
