--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -14,6 +14,7 @@ jobs:
     uses: ./.github/workflows/build-image.yml
     with:
       push: true
+      version_tag: ${{ github.ref_name }}
     secrets: inherit
 
   chart-app-version-bump:
