Revert "fix: use build caching"
This reverts commit 9439aeacb9ce7a9ce67e5cb7b3e4330a96e793dc.

--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -15,14 +15,21 @@ on:
 
 jobs:
   build-docker-image:
-    name: Build Multi-Platform Image
+    name: Build Component Image
     runs-on: ubuntu-latest
     outputs:
-      image-digest: ${{ steps.build.outputs.digest }}
-      image-metadata: ${{ steps.build.outputs.metadata }}
+      glassflow-operator-amd64: ${{ steps.gen-output.outputs.glassflow-operator-amd64 }}
+      glassflow-operator-arm64: ${{ steps.gen-output.outputs.glassflow-operator-arm64 }}
     permissions:
       contents: read
       packages: write
+    strategy:
+      matrix:
+        platform:
+          - os: linux
+            arch: amd64
+          - os: linux
+            arch: arm64
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -36,22 +43,27 @@ jobs:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ github.token }}
-      - name: Build & push multi-platform image
+      - name: Build & push Docker image
         uses: docker/build-push-action@v6
-        id: build
+        id: build-arch-image
         with:
-          platforms: linux/amd64,linux/arm64
+          platforms: ${{ matrix.platform.os }}/${{ matrix.platform.arch }}
           context: .
           file: Dockerfile
           push: ${{ inputs.push }}
           provenance: false
-          cache-from: type=gha,scope=buildx
-          cache-to: type=gha,mode=max,scope=buildx
+          outputs: push-by-digest=true,type=image
           tags: |
             ghcr.io/glassflow/glassflow-etl-k8s-operator
+      - name: Generate output
+        id: gen-output
+        run: echo "glassflow-operator-${ARCH}=$DIGEST" >> "$GITHUB_OUTPUT"
+        env:
+          ARCH: ${{ matrix.platform.arch }}
+          DIGEST: ${{ steps.build-arch-image.outputs.digest }}
 
-  tag-and-push:
-    name: Tag and Push Multi-Platform Image
+  push-docker-manifest:
+    name: Push Operator Image
     runs-on: ubuntu-latest
     permissions:
       packages: write
@@ -73,13 +85,16 @@ jobs:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ github.token }}
-      - name: Tag and push multi-platform image
+      - name: Push multiarch manifest
         run: |
           echo "$TAGS" | while IFS= read -r TAG; do
-            docker buildx imagetools create \
-              --tag "$REPOSITORY:$TAG" \
-              "$REPOSITORY@${{ needs.build-docker-image.outputs.image-digest }}"
+            docker manifest create "$REPOSITORY:$TAG" \
+              --amend "$REPOSITORY@$AMD64_DIGEST" \
+              --amend "$REPOSITORY@$ARM64_DIGEST"
+            docker manifest push "$REPOSITORY:$TAG"
           done
         env:
+          AMD64_DIGEST: ${{ needs.build-docker-image.outputs.glassflow-operator-amd64 }}
+          ARM64_DIGEST: ${{ needs.build-docker-image.outputs.glassflow-operator-arm64 }}
           TAGS: ${{ steps.meta.outputs.tags }}
           REPOSITORY: ghcr.io/glassflow/glassflow-etl-k8s-operator
