--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -17,6 +17,24 @@ jobs:
       version_tag: ${{ github.ref_name }}
     secrets: inherit
 
+  create-release:
+    name: Create GitHub Release
+    runs-on: ubuntu-latest
+    needs: [build-operator-image]
+    permissions:
+      contents: write
+    steps:
+      - name: Create Release
+        uses: actions/create-release@v1
+        with:
+          tag_name: ${{ github.ref_name }}
+          release_name: Release ${{ github.ref_name }}
+          draft: false
+          prerelease: false
+          generate_release_notes: true
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
   chart-app-version-bump:
     needs: [build-operator-image]
     uses: ./.github/workflows/chart-app-version-bump.yml
