--- a/charts/glassflow-operator/templates/manager-rbac.yaml
+++ b/charts/glassflow-operator/templates/manager-rbac.yaml
@@ -26,6 +26,8 @@ rules:
   - get
   - list
   - watch
+  - patch
+  - update
 - apiGroups:
   - etl.glassflow.io
   resources:
@@ -52,6 +54,14 @@ rules:
   - get
   - patch
   - update
+- apiGroups:
+  - apiextensions.k8s.io
+  resources:
+  - customresourcedefinitions
+  verbs:
+  - delete
+  - get
+  - list
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
