refactor: improve build process

--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -33,6 +33,13 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      - name: Download operator binary artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: operator-${{ matrix.platform.os }}-${{ matrix.platform.arch }}
+          path: bin
+      - name: Make binary executable
+        run: chmod +x bin/manager
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
       - name: Set up Docker Buildx
