--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -24,8 +24,15 @@ jobs:
             charts:
               - 'charts/**'
 
+  build-operator-binary:
+    if: ${{ !contains(github.event.pull_request.labels.*.name, 'no-build') }}
+    uses: ./.github/workflows/build_binary.yaml
+
   test-operator:
+    needs: [build-operator-binary]
+    if: ${{ !contains(github.event.pull_request.labels.*.name, 'no-build') }}
     uses: ./.github/workflows/test-operator.yml
+
   build-operator-image:
     needs: [test-operator]
     if: ${{ !contains(github.event.pull_request.labels.*.name, 'no-build') }}
