--- a/.dockerignore
+++ b/.dockerignore
@@ -1,3 +1,4 @@
 # More info: https://docs.docker.com/engine/reference/builder/#dockerignore-file
-# Ignore build and test binaries.
-bin/
+# Ignore build and test binaries, but allow the manager binary for the new build process
+bin/*
+!bin/manager
