feat: paralleize test and build steps

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,12 +26,12 @@ jobs:
     uses: ./.github/workflows/build_binary.yaml
 
   test-operator:
-    needs: [build-operator-binary]
+    needs: [check-merge]
     if: needs.check-merge.outputs.should-build
     uses: ./.github/workflows/test-operator.yml
 
   build-operator-image:
-    needs: [test-operator]
+    needs: [build-operator-binary, test-operator]
     if: needs.check-merge.outputs.should-build
     uses: ./.github/workflows/build-image.yml
     with:
