--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -29,12 +29,11 @@ jobs:
     uses: ./.github/workflows/build_binary.yaml
 
   test-operator:
-    needs: [build-operator-binary]
     if: ${{ !contains(github.event.pull_request.labels.*.name, 'no-build') }}
     uses: ./.github/workflows/test-operator.yml
 
   build-operator-image:
-    needs: [test-operator]
+    needs: [build-operator-binary, test-operator]
     if: ${{ !contains(github.event.pull_request.labels.*.name, 'no-build') }}
     uses: ./.github/workflows/build-image.yml
     with:
