--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -10,11 +10,10 @@ jobs:
     uses: ./.github/workflows/build_binary.yaml
 
   test-operator:
-    needs: [build-operator-binary]
     uses: ./.github/workflows/test-operator.yml
 
   build-operator-image:
-    needs: [test-operator]
+    needs: [build-operator-binary, test-operator]
     uses: ./.github/workflows/build-image.yml
     with:
       push: true
