fix: add default OTEL SDK OLTP endpoint with defaults

--- a/charts/glassflow-operator/templates/deployment.yaml
+++ b/charts/glassflow-operator/templates/deployment.yaml
@@ -86,6 +86,8 @@ spec:
           value: {{ .Values.global.observability.metrics.enabled | quote }}
         - name: OBSERVABILITY_OTEL_ENDPOINT
           value: "http://{{ .Release.Name }}-otel-collector.{{ .Release.Namespace }}.svc.cluster.local:4318"
+        - name: OTEL_EXPORTER_OTLP_ENDPOINT
+          value: "http://{{ .Release.Name }}-otel-collector.{{ .Release.Namespace }}.svc.cluster.local:4318"
         - name: INGESTOR_LOG_LEVEL
           value: {{ .Values.glassflowComponents.ingestor.logLevel | quote }}
         - name: JOIN_LOG_LEVEL
