feat: parallelize image builds and test runs

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,13 +20,18 @@ jobs:
             echo "❌ PR has 'no-build' label - skipping build"
           fi
 
+  build-operator-binary:
+    needs: [check-merge]
+    if: needs.check-merge.outputs.should-build
+    uses: ./.github/workflows/build_binary.yaml
+
   test-operator:
     needs: [check-merge]
     if: needs.check-merge.outputs.should-build
     uses: ./.github/workflows/test-operator.yml
 
   build-operator-image:
-    needs: [test-operator]
+    needs: [build-operator-binary, test-operator]
     if: needs.check-merge.outputs.should-build
     uses: ./.github/workflows/build-image.yml
     with:
