--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -35,7 +35,7 @@ jobs:
   build-operator-image:
     needs: [build-operator-binary, test-operator]
     if: ${{ !contains(github.event.pull_request.labels.*.name, 'no-build') }}
-    uses: ./.github/workflows/build-image.yml
+    uses: ./.github/workflows/build-image.yaml
     with:
       push: true
       pr_number: ${{ github.event.number }}
