--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -26,7 +26,7 @@ jobs:
 
   build-operator-binary:
     if: ${{ !contains(github.event.pull_request.labels.*.name, 'no-build') }}
-    uses: ./.github/workflows/build_binary.yaml
+    uses: ./.github/workflows/build_binary.yml
 
   test-operator:
     if: ${{ !contains(github.event.pull_request.labels.*.name, 'no-build') }}
@@ -35,7 +35,7 @@ jobs:
   build-operator-image:
     needs: [build-operator-binary, test-operator]
     if: ${{ !contains(github.event.pull_request.labels.*.name, 'no-build') }}
-    uses: ./.github/workflows/build-image.yaml
+    uses: ./.github/workflows/build-image.yml
     with:
       push: true
       pr_number: ${{ github.event.number }}
