feat: enable deployment of components to specified namespace

--- a/charts/glassflow-operator/templates/manager-rbac.yaml
+++ b/charts/glassflow-operator/templates/manager-rbac.yaml
@@ -9,6 +9,17 @@ rules:
   - ""
   resources:
   - namespaces
+  verbs:
+  {{- if .Values.global.pipelines.namespace.auto }}
+  - create
+  - delete
+  {{- end }}
+  - get
+  - list
+  - watch
+- apiGroups:
+  - ""
+  resources:
   - secrets
   verbs:
   - create
