--- a/charts/glassflow-operator/templates/deployment.yaml
+++ b/charts/glassflow-operator/templates/deployment.yaml
@@ -38,6 +38,10 @@ spec:
         env:
         - name: NATS_ADDR
           value: "{{ .Values.global.nats.address | default (printf "nats://%s-nats.%s.svc.cluster.local:4222" .Release.Name .Release.Namespace) }}"
+        - name: PIPELINES_NAMESPACE_AUTO
+          value: {{ .Values.global.pipelines.namespace.auto | quote }}
+        - name: PIPELINES_NAMESPACE_NAME
+          value: {{ .Values.global.pipelines.namespace.name | quote }}
         - name: NATS_MAX_STREAM_AGE
           value: "{{ .Values.global.nats.stream.maxAge }}"
         - name: NATS_MAX_STREAM_BYTES
