--- a/charts/glassflow-operator/templates/pipeline-crd.yaml
+++ b/charts/glassflow-operator/templates/pipeline-crd.yaml
@@ -4,8 +4,6 @@ metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.17.1
   name: pipelines.etl.glassflow.io
-  labels:
-  {{- include "glassflow-operator.labels" . | nindent 4 }}
 spec:
   group: etl.glassflow.io
   names:
@@ -109,6 +107,23 @@ spec:
                             largest representable duration to approximately 290 years.
                           format: int64
                           type: integer
+                        deduplication:
+                          description: Operator-specific dedup configuration
+                          properties:
+                            enabled:
+                              type: boolean
+                            nats_consumer_name:
+                              type: string
+                            storage_class:
+                              type: string
+                            storage_size:
+                              type: string
+                            stream:
+                              type: string
+                          required:
+                          - enabled
+                          - stream
+                          type: object
                         replicas:
                           minimum: 1
                           type: integer
