Add configmap for operator

--- a/charts/glassflow-operator/templates/deployment.yaml
+++ b/charts/glassflow-operator/templates/deployment.yaml
@@ -35,77 +35,10 @@ spec:
         - --health-probe-bind-address=:8081        
         command:
         - /manager
+        envFrom:
+        - configMapRef:
+            name: glassflow-operator-config
         env:
-        - name: NATS_ADDR
-          value: "{{ .Values.global.nats.address | default (printf "nats://%s-nats.%s.svc.cluster.local:4222" .Release.Name .Release.Namespace) }}"
-        - name: PIPELINES_NAMESPACE_AUTO
-          value: {{ .Values.global.pipelines.namespace.auto | quote }}
-        - name: PIPELINES_NAMESPACE_NAME
-          value: {{ .Values.global.pipelines.namespace.name | quote }}
-        - name: NATS_MAX_STREAM_AGE
-          value: "{{ .Values.global.nats.stream.maxAge }}"
-        - name: NATS_MAX_STREAM_BYTES
-          value: "{{ .Values.global.nats.stream.maxBytes }}"
-        - name: KUBERNETES_CLUSTER_DOMAIN
-          value: {{ quote .Values.kubernetesClusterDomain }}
-        - name: INGESTOR_IMAGE
-          value: "{{ .Values.global.imageRegistry | default "" }}{{ .Values.glassflowComponents.ingestor.image.repository }}:{{ .Values.glassflowComponents.ingestor.image.tag }}"
-        - name: JOIN_IMAGE
-          value: "{{ .Values.global.imageRegistry | default "" }}{{ .Values.glassflowComponents.join.image.repository }}:{{ .Values.glassflowComponents.join.image.tag }}"
-        - name: SINK_IMAGE
-          value: "{{ .Values.global.imageRegistry | default "" }}{{ .Values.glassflowComponents.sink.image.repository }}:{{ .Values.glassflowComponents.sink.image.tag }}"
-        - name: INGESTOR_CPU_REQUEST
-          value: {{ .Values.glassflowComponents.ingestor.resources.requests.cpu | quote }}
-        - name: INGESTOR_CPU_LIMIT
-          value: {{ .Values.glassflowComponents.ingestor.resources.limits.cpu | quote }}
-        - name: INGESTOR_MEMORY_REQUEST
-          value: {{ .Values.glassflowComponents.ingestor.resources.requests.memory | quote }}
-        - name: INGESTOR_MEMORY_LIMIT
-          value: {{ .Values.glassflowComponents.ingestor.resources.limits.memory | quote }}
-        - name: JOIN_CPU_REQUEST
-          value: {{ .Values.glassflowComponents.join.resources.requests.cpu | quote }}
-        - name: JOIN_CPU_LIMIT
-          value: {{ .Values.glassflowComponents.join.resources.limits.cpu | quote }}
-        - name: JOIN_MEMORY_REQUEST
-          value: {{ .Values.glassflowComponents.join.resources.requests.memory | quote }}
-        - name: JOIN_MEMORY_LIMIT
-          value: {{ .Values.glassflowComponents.join.resources.limits.memory | quote }}
-        - name: SINK_CPU_REQUEST
-          value: {{ .Values.glassflowComponents.sink.resources.requests.cpu | quote }}
-        - name: SINK_CPU_LIMIT
-          value: {{ .Values.glassflowComponents.sink.resources.limits.cpu | quote }}
-        - name: SINK_MEMORY_REQUEST
-          value: {{ .Values.glassflowComponents.sink.resources.requests.memory | quote }}
-        - name: SINK_MEMORY_LIMIT
-          value: {{ .Values.glassflowComponents.sink.resources.limits.memory | quote }}
-        - name: INGESTOR_AFFINITY
-          value: {{ .Values.glassflowComponents.ingestor.affinity | toJson | quote }}
-        - name: JOIN_AFFINITY
-          value: {{ .Values.glassflowComponents.join.affinity | toJson | quote }}
-        - name: SINK_AFFINITY
-          value: {{ .Values.glassflowComponents.sink.affinity | toJson | quote }}
-        - name: OBSERVABILITY_LOGS_ENABLED
-          value: {{ .Values.global.observability.logs.enabled | quote }}
-        - name: OBSERVABILITY_METRICS_ENABLED
-          value: {{ .Values.global.observability.metrics.enabled | quote }}
-        - name: OBSERVABILITY_OTEL_ENDPOINT
-          value: "http://{{ .Release.Name }}-otel-collector.{{ .Release.Namespace }}.svc.cluster.local:4318"
-        - name: OTEL_EXPORTER_OTLP_ENDPOINT
-          value: "http://{{ .Release.Name }}-otel-collector.{{ .Release.Namespace }}.svc.cluster.local:4318"
-        - name: INGESTOR_LOG_LEVEL
-          value: {{ .Values.glassflowComponents.ingestor.logLevel | quote }}
-        - name: JOIN_LOG_LEVEL
-          value: {{ .Values.glassflowComponents.join.logLevel | quote }}
-        - name: SINK_LOG_LEVEL
-          value: {{ .Values.glassflowComponents.sink.logLevel | quote }}
-        - name: INGESTOR_IMAGE_TAG
-          value: {{ .Values.glassflowComponents.ingestor.image.tag | quote }}
-        - name: JOIN_IMAGE_TAG
-          value: {{ .Values.glassflowComponents.join.image.tag | quote }}
-        - name: SINK_IMAGE_TAG
-          value: {{ .Values.glassflowComponents.sink.image.tag | quote }}
-        - name: OPERATOR_IMAGE_TAG
-          value: {{ .Values.controllerManager.manager.image.tag | default .Chart.AppVersion | quote }}
         - name: POD_NAME
           valueFrom:
             fieldRef:
