--- a/charts/glassflow-operator/templates/configmap.yaml
+++ b/charts/glassflow-operator/templates/configmap.yaml
@@ -48,4 +48,6 @@ data:
   DEDUP_MEMORY_LIMIT: {{ .Values.glassflowComponents.dedup.resources.limits.memory | quote }}
   DEDUP_AFFINITY: {{ .Values.glassflowComponents.dedup.affinity | toJson | quote }}
   DEDUP_LOG_LEVEL: {{ .Values.glassflowComponents.dedup.logLevel | quote }}
+  DEDUP_STORAGE_SIZE: {{ .Values.glassflowComponents.dedup.storage.size | quote }}
+  DEDUP_STORAGE_CLASS: {{ .Values.glassflowComponents.dedup.storage.className | quote }}
 
